crates/templates/tests/snapshots/parse_arguments_while__render-19.snap
---
source: crates/templates/tests/parse_arguments_while.rs
description: Parse commands defined as a sub-command
expression: output
---
  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      *)
        break
        ;;
    esac
  done
