crates/templates/tests/snapshots/parse_arguments_while__render-5.snap
---
source: crates/templates/tests/parse_arguments_while.rs
description: Parse commands with a required global option and a default value
expression: output
---
  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -b | --bar)
        rargs_bar="$2"
        shift 2
        ;;
      --baz)
        rargs_baz="$2"
        shift 2
        ;;
      -f | --foo)
        rargs_foo="$2"
        shift 2
        ;;
      -?*)
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option: " "$key" >&2
        exit 1
        ;;
      *)
        if [[ "$key" == "" ]]; then
          break
        fi
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid argument: " "$key" >&2
        exit 1
        ;;
    esac
  done
